Consider compositing state in row background display item client accessor.

BUG=689479

Review-Url: https://codereview.chromium.org/2784673004
Cr-Commit-Position: refs/heads/master@{#460524}